manifests/familien-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: mein-ms
  labels:
    app: dashboard
spec:
  ports:
  - name: ui
    port: 8080
    targetPort: ui
  selector:
    app: dashboard
