manifests/familien-dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: mein-ms
  labels:
    app: dashboard
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: dashboard.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: ui
        path: /
  - host: dashboard-codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: ui
        path: /stadtviertel
  - host: dashboard-codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: ui
        path: /copyright
  - host: dashboard-codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: ui
        path: /impressum
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /stadtviertel
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /copyright
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /impressum
  tls:
  - hosts:
    - dashboard.codeformuenster.org
    # - mein-ms.de
    # - www.mein-ms.de
    secretName: dashboard-tls
